--- a/css/type.css
+++ b/css/type.css
@@ -1,6 +1,6 @@
 /*
   Typografier || Code released under the UNLICENSE
-  https://typografier.web-dev.tools/#0,100,1.3,1.067,0;38,110,1.4,1.125,1;60,120,1.5,1.125,1;90,130,1.5,1.125,1
+  https://typografier.web-dev.tools/#0,100,1.3,1.125,0;38,110,1.4,1.125,1;60,120,1.5,1.125,1;90,130,1.5,1.125,1
 */
 
 html {
@@ -171,62 +171,62 @@ menu {
 }
 
 .tenamega {
-  font-size: 2.0408rem;
-  line-height: 2.925rem;
+  font-size: 3.6532rem;
+  line-height: 4.875rem;
 }
 
 .tenakilo {
-  font-size: 1.9127rem;
-  line-height: 2.6rem;
+  font-size: 3.2473rem;
+  line-height: 4.225rem;
 }
 
 .tena {
-  font-size: 1.7926rem;
-  line-height: 2.6rem;
+  font-size: 2.8865rem;
+  line-height: 3.9rem;
 }
 
 .nina {
-  font-size: 1.68rem;
-  line-height: 2.275rem;
+  font-size: 2.5658rem;
+  line-height: 3.575rem;
 }
 
 .yotta {
-  font-size: 1.5745rem;
-  line-height: 2.275rem;
+  font-size: 2.2807rem;
+  line-height: 3.25rem;
 }
 
 .zetta {
-  font-size: 1.4757rem;
-  line-height: 1.95rem;
+  font-size: 2.0273rem;
+  line-height: 2.925rem;
 }
 
 h1,
 .exa {
-  font-size: 1.383rem;
-  line-height: 1.95rem;
+  font-size: 1.802rem;
+  line-height: 2.6rem;
 }
 
 h2,
 .peta {
-  font-size: 1.2962rem;
-  line-height: 1.95rem;
+  font-size: 1.6018rem;
+  line-height: 2.275rem;
 }
 
 h3,
 .tera {
-  font-size: 1.2148rem;
-  line-height: 1.625rem;
+  font-size: 1.4238rem;
+  line-height: 1.95rem;
 }
 
 h4,
 .giga {
-  font-size: 1.1385rem;
-  line-height: 1.625rem;
+  font-size: 1.2656rem;
+  line-height: 1.95rem;
 }
 
 h5,
 .mega {
-  font-size: 1.067rem;
+  font-size: 1.125rem;
   line-height: 1.625rem;
 }
 
@@ -240,23 +240,23 @@ textarea {
 
 small,
 .milli {
-  font-size: .9372rem;
+  font-size: .8889rem;
   line-height: 1.3rem;
 }
 
 .micro {
-  font-size: .8784rem;
+  font-size: .7901rem;
   line-height: 1.3rem;
 }
 
 .nano {
-  font-size: .8232rem;
+  font-size: .7023rem;
   line-height: 1.3rem;
 }
 
 .pico {
-  font-size: .7715rem;
-  line-height: 1.3rem;
+  font-size: .6243rem;
+  line-height: .975rem;
 }
 
 ul {
