--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,20 @@ section input {
   max-width: 20rem;
 }
 
+.features {
+  background-color: #009db9;
+}
+
+.features caption {
+  color: #fff;
+}
+
+th,
+td {
+  color: #fff;
+  border: none;
+}
+
 .card {
   border: 2px solid #0048b9;
   max-width: 15rem;
@@ -87,7 +101,7 @@ section input {
 }
 
 .pricing-btn {
-  background-color: #009DB9;
+  background-color: #009db9;
   color: #fff;
   padding: .5rem 1rem;
   text-decoration: none;
@@ -102,8 +116,7 @@ section input {
   font-size: .75rem;
 }
 
-.free-trial,
-.customization {
+.free-trial {
   background-color: rgba(90, 107, 140, 0.45);
 }
 
@@ -118,5 +131,5 @@ section input {
 }
 
 .sign-in {
-  background-color: #009DB9;
+  background-color: #009db9;
 }
