--- a/css/modules.css
+++ b/css/modules.css
@@ -1050,11 +1050,15 @@ button::-moz-focus-inner {
 
 button:focus,
 button:hover,
-.btn:focus,
-.btn:hover {
+.btn:focus {
   background-color: #000;
   border-color: #000;
   color: #fff;
+}
+
+.btn:hover {
+  background-color: #0048b9;
+  border: 3px solid #0048b9;
 }
 
 button[disabled] {
