Fix the buttons

--- a/css/modules.css
+++ b/css/modules.css
@@ -1052,8 +1052,8 @@ button:focus,
 button:hover,
 .btn:focus,
 .btn:hover {
-  background-color: #0048b9;
-  border: 3px solid #0048b9;
+  background-color: #000;
+  border-color: #000;
   color: #fff;
 }
 
